# gap-the-mind-schema

./: .gitignore  Cargo.toml  README.md  build.rs
schema_gen/: Cargo.toml
schema_gen/src/: class.rs  generator.rs  lib.rs  property.rs  return_types.rs  schema.rs  utils.rs
schema_gen/src/schema/: class.rs  definition.rs  elements.rs  enum_member.rs  mod.rs  property.rs
schemas/: schemaorg-current-https.jsonld
src/: enums.rs  lib.rs  schema.rs  structs.rs  traits.rs  unions.rs
