[package]
name = "gap-the-mind-schema"
version = "0.1.0"
authors = ["Matthieu Dartiguenave <matthieu.dartiguenave@gmail.com>"]
edition = "2018"

[build-dependencies]
schema_gen = {path= "schema_gen"}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "schema_gen"
]


[dependencies]
