[package]
name = "schema_gen"
version = "0.1.0"
authors = ["Matthieu Dartiguenave <matthieu.dartiguenave@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde = {version = "1", features = ["derive"] }
url = {version = "2", features = ["serde"]}
codegen = "0.1.3"
itertools = "0.10.0"
convert_case = "0.4.0"

